[gd_scene load_steps=2 format=3 uid="uid://cyp751bk2dd7u"]

[ext_resource type="Script" path="res://china.gd" id="1_4y7c7"]

[node name="China" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4y7c7")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -83.0
offset_right = 105.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "China"

[node name="Option1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "A. Gunpowder Powered Dart Gun"

[node name="Option2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "B. Cannon"

[node name="Option3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "C. Fire Lance"

[node name="Option4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "D. Grenade"

[connection signal="pressed" from="VBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Option4" to="." method="_on_option_4_pressed"]
